--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "chart.js": "^3.9.1",
+    "firebase": "^10.12.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs": "^1.2.0",
