--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     repo: https://github.com/tanishabhatnagar/expense-tracker.git
     branch: main
-    buildCommand: npm install
+    buildCommand: cd backend && npm install
     startCommand: npm start
     envVars:
       - key: PORT
