--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -5,7 +5,7 @@ services:
     repo: https://github.com/tanishabhatnagar/expense-tracker.git
     branch: main
     buildCommand: cd backend && npm install
-    startCommand: npm start
+    startCommand: cd backend && npm start
     envVars:
       - key: PORT
         value: "5000"
