Update Netlify configuration for frontend deployment

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [build]
   base = "frontend"
   publish = "frontend/build"
-  command = "npm run build"
+  command = "npm install --legacy-peer-deps && npm run build"
+
 
 [[redirects]]
   from = "/*"
