--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,14 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.16.0",
     "axios": "^1.6.8",
     "chart.js": "^3.9.1",
     "firebase": "^10.12.2",
