--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,12 @@
 
 
   [build]
-  command = "npm install --legacy-peer-deps && npm run build"
-  publish = "frontend/build"
   base = "frontend"
-
-
+  command = "npm install --legacy-peer-deps && npm run build"
+  publish = "build"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
