--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
-  },
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  }
+  ,
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -13,6 +15,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.4",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.3"
   }
 }
