--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     repo: https://github.com/tanishabhatnagar/expense-tracker.git
     branch: main
-    buildCommand: cd backend && npm install
+    buildCommand: cd backend && npm install --legacy-peer-deps
     startCommand: cd backend && npm start
     envVars:
       - key: PORT
